@@ -1,5 +1,6 @@
 package com.baeldung.networking.proxies;
 
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -9,7 +10,7 @@ public class CommandLineProxyDemo {
 
     public static void main(String[] args) throws Exception {
 
-        URL url = new URL(RESOURCE_URL);
+        URL url = new URI(RESOURCE_URL).toURL();
         URLConnection con = url.openConnection();
         System.out.println(UrlConnectionUtils.contentAsString(con));
     }
